--- a/src/assets/scss/ui-kit.scss
+++ b/src/assets/scss/ui-kit.scss
@@ -14,6 +14,7 @@ $sig-pink: #E73F7F;
     ::-webkit-scrollbar {
         width: 8px;               /* width of the entire scrollbar */
         background-color: transparent;
+        z-index: 9999999999;
     }
     
     ::-webkit-scrollbar-track {
