--- a/src/components/work-project/work-project.styles.scss
+++ b/src/components/work-project/work-project.styles.scss
@@ -1,13 +1,14 @@
 @import '../../assets/scss/ui-kit.scss';
 
 .work-project {
-    height: autogit ;
+    height: auto;
     width: 100%;
     margin: 0;
     padding: 15vh 0 0 0;
     background-color: $sig-dark;
     display: flex;
     justify-content: center;
+    border: .1px solid #333333;
 
     .project-content {
         height: 70vh;
